--- a/src/main/resources/templates/mensaje.html
+++ b/src/main/resources/templates/mensaje.html
@@ -7,7 +7,7 @@
 <body>
 <div id="container" align="center"> 
 	<h2>API Ventas</h2>
-    <p th:text="${successMessage}" >
+    <p th:text="${successMessage}" ></p>
     <p th:if="${errorMessage}" class="error"><font color="red">Intente nuevamente</font></p>
     <br></br>
     <a href="/volverMenu">Volver al Menu</a>
